Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         const predefinednegros = [
             {
                 imageUrl: 'https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
-                height: 60,
+                height: 185,
                 wear: '0km',
                 obedience: 'sumiso',
                 reason: 'No lo necesito, fue un regalo.',
@@ -173,38 +173,38 @@
             },
             {
                 imageUrl: 'https://images.unsplash.com/photo-1507003211169-0a1ddf724f67?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
-                height: 45,
+                height: 170,
                 wear: 'poco-uso',
                 obedience: 'obedece',
-                reason: 'Me compré una nueva.',
+                reason: 'Me compré uno nuevo.',
                 behavior: 'Funciona bien para tareas diarias.',
                 price: 5000,
             },
             {
                 imageUrl: 'https://images.unsplash.com/photo-1542909168-82c72fd3458b?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
-                height: 35,
+                height: 176,
                 wear: 'uso-medio',
                 obedience: 'medio-terco',
-                reason: 'Quiero cambiar de marca.',
+                reason: 'ya no rinde tan bien en el dia.',
                 behavior: 'Suele quejarse de los látigos, pero rinde.',
                 price: 3000,
             },
             {
                 imageUrl: 'https://images.unsplash.com/photo-1531123897727-8f129e1688ce?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
-                height: 55,
+                height: 182,
                 wear: 'destrozado',
                 obedience: 'rebelde',
-                reason: 'Se me cayó por las escaleras y lo detonó hace mucho.',
+                reason: 'Se me cayó por las escaleras y camina medio rengo.',
                 behavior: 'Ha dado muchas batallas, necesita un médico y reposo.',
                 price: 800,
             },
             {
                 imageUrl: 'https://images.unsplash.com/photo-1500648767791-00dcc994a43e?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
-                height: 40,
+                height: 177,
                 wear: '0km',
                 obedience: 'sumiso',
                 reason: 'Cumple con todo, lo vendo por falta de espacio.',
-                behavior: 'Una verdadera bestia. Rendimiento superior, sin fallos y con componentes de alta gama.',
+                behavior: 'Una verdadera bestia. Rendimiento superior, sin fallos y con un culito que hace agua a la boca.',
                 price: 22500,
             }
         ];
