Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
         // Datos de negros predefinidos
         const predefinednegros = [
             {
-                imageUrl: 'https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
+                imageUrl: 'https://images.app.goo.gl/HjidQB7yFViervbP6',
                 height: 185,
                 wear: '0km',
                 obedience: 'sumiso',
                 reason: 'No lo necesito, fue un regalo.',
-                behavior: 'Un negro silencioso y rápido, ideal para hablar o trabajo pesado.',
+                behavior: 'Un negro silencioso y ideal para hablar o trabajo pesado.',
                 price: 12000,
             },
             {
-                imageUrl: 'https://images.unsplash.com/photo-1507003211169-0a1ddf724f67?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
+                imageUrl: 'https://images.app.goo.gl/rfeP6TiT7m3u3aGN7',
                 height: 170,
                 wear: 'poco-uso',
                 obedience: 'obedece',
@@ -181,7 +181,7 @@
                 price: 5000,
             },
             {
-                imageUrl: 'https://images.unsplash.com/photo-1542909168-82c72fd3458b?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
+                imageUrl: 'https://images.app.goo.gl/u4d5fGTdPiD8HiZ1A',
                 height: 176,
                 wear: 'uso-medio',
                 obedience: 'medio-terco',
@@ -190,7 +190,7 @@
                 price: 3000,
             },
             {
-                imageUrl: 'https://images.unsplash.com/photo-1531123897727-8f129e1688ce?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
+                imageUrl: 'https://images.app.goo.gl/M1qnhumQh3kD6gFKA',
                 height: 182,
                 wear: 'destrozado',
                 obedience: 'rebelde',
@@ -199,7 +199,7 @@
                 price: 800,
             },
             {
-                imageUrl: 'https://images.unsplash.com/photo-1500648767791-00dcc994a43e?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
+                imageUrl: 'https://images.app.goo.gl/PJhCqw2DEatiQCp26',
                 height: 177,
                 wear: '0km',
                 obedience: 'sumiso',
