Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body class="bg-gray-100 flex flex-col items-center justify-start"> <div class="container mx-auto rounded-2xl bg-card">
         <div id="main-page" class="text-center transition-opacity duration-300 py-2 px-2">
-            <h1 class="text-2xl font-bold mb-3 text-gray-800">Ventas de negros Miluka</h1> <p class="text-base text-gray-600 mb-4">Elige una opción para comenzar.</p> <div class="flex flex-col md:flex-row gap-3 justify-center">
+            <h1 class="text-2xl font-bold mb-3 text-gray-800">Ventas de negros Gimi y joseph</h1> <p class="text-base text-gray-600 mb-4">Elige una opción para comenzar.</p> <div class="flex flex-col md:flex-row gap-3 justify-center">
                 <button onclick="showPage('sell-negro-form')" class="bg-blue-600 text-white font-semibold py-2 px-5 rounded-xl shadow-lg hover:bg-blue-700 transition-all duration-300 transform hover:scale-105 text-sm">
                     Vender mi negro
                 </button>
